[package]
name = "munarkma"
version = "1.0.0"
edition = "2024"
authors = ["Duswnsey <Duswnsey@gmail.com>"]
description = "Namumark parser"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/Repo2joo/Namumark"
keywords = ["parser", "namumark"]
[dependencies]
regex = "1.12.2"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
